[package]
name = "tgjpg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "sync"] }
regex = "1.11.1"
url = "2.5.4"
reqwest = "0.12.9"
anyhow = "1.0.94"
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2.1.3"
